<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:focusableInTouchMode="true"
    tools:context=".ui.therapy.AddTherapyFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/edit_text_therapy_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:inputType="none"
        android:onClick="showDatePickerDialog"
        android:hint="@string/date"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintTop_toBottomOf="@id/edit_text_therapy_date"
        android:layout_marginBottom="20dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/edit_text_therapy_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:inputType="none"
        android:onClick="showTimePickerDialog"
        android:hint="@string/time"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_therapy_time"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dose"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintTop_toBottomOf="@+id/type_spinner"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/edit_text_dose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/dose"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <Button
        android:id="@+id/button_save_therapy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_dose" />

</androidx.constraintlayout.widget.ConstraintLayout>