...
    <string name="navigation_registration">Sign up for an account</string>

    <string name="addTherapyTitle">Add new therapy</string>

    <!-- MISC -->

    <string name="enterAllData">Enter all data</string>
    <string name="therapyAdded">Therapy added</string>
    <string name="userAdded">User added</string>


</resources>
