<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.user.UserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="?android:attr/actionBarSize"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/gender"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:layout_constraintTop_toBottomOf="@+id/ll1" />

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_text_rounded_corner"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/age"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:layout_constraintTop_toBottomOf="@+id/spinner_gender" />

            <EditText
                android:id="@+id/edit_text_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_text_rounded_corner"
                android:padding="12dp"
                android:inputType="number"
                android:hint="@string/age"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/height"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:layout_constraintTop_toBottomOf="@+id/text_view_age" />

            <EditText
                android:id="@+id/edit_text_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_text_rounded_corner"
                android:padding="12dp"
                android:hint="@string/height"
                android:inputType="number"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/weight"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:layout_constraintTop_toBottomOf="@+id/text_view_height" />

            <EditText
                android:id="@+id/edit_text_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_text_rounded_corner"
                android:padding="12dp"
                android:hint="@string/weight"
                android:inputType="number"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/type_of_diabetes"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:layout_constraintTop_toBottomOf="@+id/text_view_weight" />

            <Spinner
                android:id="@+id/spinner_diabetes_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_text_rounded_corner"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <Button
                android:id="@+id/button_save_edit_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/save" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>